--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link rel="stylesheet" href="https://unpkg.com/primeicons@4.0.0/primeicons.css">
+
   <title>Maria DB</title>
 </head>
 
